<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright 2024-2026, Dmytro Ostapenko (AndraxDev). All rights reserved.
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<resources>
    <string name="app_name">Paint Chips</string>
    <string name="btn_copy">Copy</string>
    <string name="btn_close">Close</string>
    <string name="btn_accent_chips">Accent chips</string>
    <string name="btn_surface_chips">Surface chips</string>
    <string name="app_description">This app allows you to view system accent colors. Starting from Android 12 Google added paint chips as an easter egg. Later, in Android 14, Google removed this feature. This is recreation of original Google easter egg, but smarter.</string>
    <string name="hint_long_press_to_copy">(Long press to copy)</string>
    <string name="menu_accent_palette">Accent</string>
    <string name="menu_surface_palette">Surface</string>
    <string name="menu_about">About</string>
    <string name="version">Version: %s</string>
    <string name="menu_harmonizer">Harmonizer</string>
</resources>
