<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright 2024, Dmytro Ostapenko (AndraxDev). All rights reserved.
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_accent_palette"
        android:title="@string/menu_accent_palette"
        android:icon="@drawable/menu_accent_palette"/>

    <item
        android:id="@+id/menu_surface_palette"
        android:title="@string/menu_surface_palette"
        android:icon="@drawable/menu_surface_palette"/>

    <item
        android:id="@+id/menu_harmonizer"
        android:title="@string/menu_harmonizer"
        android:icon="@drawable/menu_surface_palette"/>

    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:icon="@drawable/menu_about"/>
</menu>
